Tabbed Navigation: Fix list items on small screens
* Make items full-width on small screens (743px <)

--- a/assets/components/src/tabbed-navigation/style.scss
+++ b/assets/components/src/tabbed-navigation/style.scss
@@ -10,20 +10,26 @@
 
 	ul {
 		display: flex;
+		flex-wrap: wrap;
 		margin: 0 14px;
 	}
 
 	li {
-		margin: 0 2px;
-		padding: 0;
 		display: block;
-		flex: 1;
+		flex: 0 0 100%;
+		margin: 0 2px 8px;
+		padding: 0;
 		text-align: center;
+
+		@media screen and ( min-width: 744px ) {
+			flex: 1;
+			margin-bottom: 0;
+		}
 	}
 
 	a {
 		background: $light-gray-500;
-		border-radius: 4px 4px 0 0;
+		border-radius: 4px;
 		box-sizing: border-box;
 		color: $dark-gray-900;
 		display: block;
@@ -31,6 +37,10 @@
 		margin: 0;
 		padding: 8px;
 		text-decoration: none;
+
+		@media screen and ( min-width: 744px ) {
+			border-radius: 4px 4px 0 0;
+		}
 
 		&:active,
 		&:focus,
